<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".SplashActivity">

    <!-- App Icon with circle background -->
    <FrameLayout
        android:id="@+id/icon_container"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tv_splash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_splash_circle" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_medicine"
            app:tint="@android:color/white"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <!-- App Title -->
    <TextView
        android:id="@+id/tv_splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tv_splash_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_container" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/tv_splash_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_tagline"
        android:textColor="#B3FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_title" />

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:indeterminateTint="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tv_initiative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_tagline" />

    <!-- Government Initiative Badge -->
    <TextView
        android:id="@+id/tv_initiative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/splash_initiative"
        android:textColor="#99FFFFFF"
        android:textSize="12sp"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
